manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vuorovaikutuspeli-svc
spec:
  selector:
    app: vuorovaikutuspeli
  ports:
    - protocol: TCP
      port: 80         
      targetPort: 4173  
  type: ClusterIP
