manifests/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: eliopeli-route
  namespace: eliopeli
  labels:
    app: eliopeli
    type: external
spec:
  host: eliopeli-staging.ext.ocp-test-0.k8s.it.helsinki.fi 
  port:
    targetPort: 4173 
  to:
    kind: Service
    name: eliopeli-svc
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
